# Tinker-Backend

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py  urls.py
produtos/: admin.py  models.py  serializers.py  views.py
produtos/migrations/: 0001_initial.py  0002_produto_descricao_alter_produto_preco.py  0003_produto_fotoprincipal_produto_fotosecundaria_and_more.py  0004_alter_produto_fotoprincipal_and_more.py  0005_rename_fototercearia_produto_fototerciaria.py  0006_remove_produto_fototerciaria_and_more.py
usuario/: admin.py  models.py  serializers.py  views.py
usuario/migrations/: 0001_initial.py  0002_usuario_sobrenome_usuario_username_and_more.py  0003_usuario_foto_perfil.py  0004_alter_usuario_foto_perfil.py  0005_alter_usuario_foto_perfil.py  0006_alter_usuario_foto_perfil.py  0007_alter_usuario_foto_perfil.py  0008_alter_usuario_foto_perfil.py
