[project]
name = "tinker-backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "victor-de-sousa", email = "victordesousaestudo@gmail.com"},
]
dependencies = ["django>=5.2.6", "djangorestframework>=3.16.1", "Pillow>=11.3.0", "django-cors-headers>=4.8.0", "gunicorn>=23.0.0", "whitenoise>=6.11.0"]
requires-python = ">=3.10,<=3.14"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
